<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D1D1CD"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Content inside ScrollView goes here -->

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:scaleX="1.05"
                    android:layout_marginTop="-30dp"
                    app:srcCompat="@drawable/logbg2"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" InfoHub"
                    android:textStyle="bold"
                    android:textSize="48sp"
                    android:textColor="#475C59"
                    android:layout_gravity="center"
                    android:layout_marginTop="-90dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#475C59"
                    android:layout_marginLeft="190dp"
                    android:layout_marginTop="127dp"

                    android:text="Click. Find. Done."/>

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="58dp"
                android:layout_marginBottom="58dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:background="@drawable/rounded_shadow"
                android:elevation="7dp"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textColor="#465A56"
                    android:text="@string/login"
                    android:textSize="40sp"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:hint="@string/email"
                        android:textColor="#2E2E2E"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:hint="@string/password"
                        android:textColor="#2E2E2E"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="222dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#465A56"
                    android:text="@string/login"
                    android:textColor="#FFD3D3D3" />

                <TextView
                    android:id="@+id/registerNow"
                    android:layout_width="231dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="#465A56"
                    android:text="@string/click_to_register"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>




</LinearLayout>